--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dependencies": {
         "install": "^0.12.1",
         "jquery": "^3.3.1",
+        "jquery-resizable": "^1.0.6",
         "npm": "^6.4.0",
         "vue": "^2.5.0",
         "vue-trumbowyg": "^3.4.0"
